--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,23 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
+  flutter_bloc: ^8.1.4
+  flutter_screenutil: ^5.9.0
   freezed_annotation: ^2.4.1
+  get_it: ^7.6.7
+  go_router: ^13.2.0
   json_annotation: ^4.8.1
+  wifi_iot: ^0.3.19
 
 dev_dependencies:
   build_runner: ^2.4.8
   flutter_lints: ^2.0.0
-  flutter_test:
-    sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
   freezed: ^2.4.7
   json_serializable: ^6.7.1
+  mocktail: ^1.0.3
+  test: ^1.25.2
   very_good_analysis: ^5.1.0
 
 flutter:
