--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get_it: ^7.6.7
   go_router: ^13.2.0
   json_annotation: ^4.8.1
+  web_socket_channel: ^2.4.4
   wifi_iot: ^0.3.19
 
 dev_dependencies:
